Added More Volunteer Hours

--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -188,7 +188,7 @@
                     Volunteering.
                 </h3>
                 <p class="text-secondary text-center">
-                    Total Hours Volunteered - 3
+                    Total Hours Volunteered - 6
                 </p>
 
                 <!--Volunteer Cards-->
@@ -196,7 +196,7 @@
                     <div class="card">
                         <!--Food Drive Card Header-->
                         <div class="card-header" id="headingOne">
-                            <h5 class="mb-0 text-center">
+                            <h5 class="mb-1 text-center">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     Stamp Out Hunger Food Drive!
                                 </button>
@@ -204,23 +204,58 @@
                         </div>
                         <!--Food Drive Card Body-->
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                            On May 12 2018, there was a food drive event that was going on.
-                            The purpose of that food drive was to help families who could not afford food, have some.
-                            I decided to grab some friends and help out.
-                            At the food drive, there were two stations.
-                            Station one was unpacking and safety team.
-                            This team was responsible for taking out food that was collected from the bags,
-                            and making sure that they were not expired.
-                            Then there was our group.
-                            Our group was responsible for placing the items in the correct categories
-                            e.g - Soups, Vegetables, Fruits, Deserts etc.
-                            <div class="card-body">
-                            </div>
+                            <p class="text-justify ml-1 mr-1">
+                                On May 12 2018, there was a food drive event that was going on.
+                                The purpose of that food drive was to help families who could not afford food, have some.
+                                I decided to grab some friends and help out.
+                                At the food drive, there were two stations.
+                                Station one was unpacking and safety team.
+                                This team was responsible for taking out food that was collected from the bags,
+                                and making sure that they were not expired.
+                                Then there was our group.
+                                Our group was responsible for placing the items in the correct categories
+                                e.g - Soups, Vegetables, Fruits, Deserts etc.<br>
+                            </p>
+                            <p class="text-secondary">
+                                Hours Volunteered - 3
+                            </p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </div><!--End Card-->
+
+                    <!--Website Redo-->
+                    <div class="card">
+                        <!--Header-->
+                        <div class="card-header" id="headingTwo">
+                            <h5 class="mb-1 text-center">
+                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                    Website Redo.
+                                </button>
+                            </h5>
+                        </div><!--End Header-->
+                        <!--Website Redo Body-->
+                        <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordion">
+                            <p class="text-justify ml-1 mr-1">
+                                Between the days, June 15/16,
+                                I was offered the opportunity to re-develop a website.
+                                This website was a personal website, yet needed some assistance making the page more modern.
+                                Since I did not have anything else on my agenda for the provided days,
+                                I offered to redo the website.
+                                This website was all made in Bootstrap V4
+                                with no other assistance provided.
+                                If you want to see the live, modified product 
+                                (as owner modified for his taste),<br>
+                                <a href="http://spraguehs.com/vohland_andrew/">
+                                click here!
+                                </a>
+                            </p>
+                            <p class="text-secondary">
+                                Hours Volunteered - 3
+                            </p>
+                        </div><!--End Card Body-->
+                    </div><!--End Card-->
+                </div><!--Accordion-->
+            </div><!--Section-->
+        </div><!--Global Settings-->
     </div>
 
     <!--Parallax OnScroll-->
@@ -334,42 +369,6 @@
                 </div>
                 <hr>
             </div><!--Container Settings-->
-        </div><!--Global Settings-->
-    </div>
-
-    <div class="container-fluid">
-        <div class="row">
-
-            <!--About Certifications-->
-            <div class="col-lg-12">
-                <h4 class="display-4 text-center">
-                    Certifications - Explained.
-                </h4>
-            </div>
-
-            <!--Left-->
-            <div class="col-lg-6">
-                <h4 class="text-center">
-                    Pictures.
-                </h4>
-            </div>
-
-            <!--Right-->
-            <div class="col-lg-6">
-                <h4 class="text-center">
-                    Meaning.
-                </h4>
-            </div>
-
-            <!--Content Left-->
-            <div class="col-lg-6 text-center">
-                <img src="../../img/BQR-FH-page-001.jpg" class="col-lg-3">
-            </div>
-
-            <!--Content Right-->
-            <div class="col-lg-6 text-center">
-
-            </div>
         </div><!--Global Settings-->
     </div>
 </body>
