--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -270,10 +270,7 @@
                     Current / Past Employment.
                 </h2>
                 <p class="text-secondary text-center">
-                    Don't mind the mountain picture <br>
-                    It's not mine but we have to remember that <br>
-                    we need to also go outside and enjoy Nature! <br>
-                    I don't know who took the picture.
+                    Non-Development.
                 </p>
             </div>
             <div class="col-lg-12 table-responsive">
@@ -305,13 +302,45 @@
                             <td>Perla</td>
                             <td>Brambilia</td>
                             <td>Waiter</td>
-                            <td>June, 2018</td>
+                            <td>July, 2018</td>
                             <td>Current</td>
                         </tr>
                     </tbody>
                 </table>
-            </div>
-        </div>
+            </div><!--End Table-->
+
+            <!--Development-->
+            <div class="col-lg-12">
+                <p class="text-muted text-center">
+                    Development.
+                </p>
+                <!--Table-->
+                <table class="table table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Company</th>
+                            <th scope="col">Date(s) Developed</th>
+                            <th scope="col">Host</th>
+                            <th scope="col">Website</th>
+                            <th scope="col">GitHub Repository</th>
+                            <!--5 Headings-->
+                            <!--1 Table Header-->
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Berry Smooth</td>
+                            <td>April 28 - Never.</td>
+                            <td>000Webhost</td>
+                            <td><a href="https://bit.ly/2ta68Ln">Available here.</a></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div><!--End Development Container-->
+        </div><!--Global Settings-->
     </div>
 
     <!--Transition-->
