--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -10,7 +10,7 @@
     <!--BOOTSTRAP 4 REQS-->
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--CDNS-->
     <!--CSS CDN-->
@@ -43,10 +43,12 @@
 
         .display-2{
             word-break: break-word;
+            font-size: 10vh;
         }
 
         .display-1{
             word-break: break-word;
+            font-size: 10vh;
         }
 
         #bg1{
@@ -310,7 +312,7 @@
             </div><!--End Table-->
 
             <!--Development-->
-            <div class="col-lg-12">
+            <div class="col-lg-12 table-responsive">
                 <p class="text-muted text-center">
                     Development.
                 </p>
@@ -335,7 +337,7 @@
                             <td>April 28 - Never.</td>
                             <td>000Webhost</td>
                             <td><a href="https://bit.ly/2ta68Ln">Available here.</a></td>
-                            <td></td>
+                            <td><a href="https://github.com/Brayan2134">All Commits Here.</a></td>
                         </tr>
                     </tbody>
                 </table>
