Index VH Changes

--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -24,6 +24,11 @@
             body, html {
                 height: 100%;
             }
+
+            .display-1, .display-2, .display-4{
+                word-break: break-word;
+                font-size: 10vh;
+            }
             
             .parallax {
                 /*IMG*/
