--- a/Version 2/content/portfolio/portfolio.html
+++ b/Version 2/content/portfolio/portfolio.html
@@ -123,7 +123,7 @@
 
                 <!--Blog-->
                 <li class="nav-item">
-                    <a class="nav-link" href="../../works/blog/blog.html">Blog</a>
+                    <a class="nav-link" href="../price/price.html">Pricing</a>
                 </li>
             </ul>
         </div>
