--- a/Version 2/index.html
+++ b/Version 2/index.html
@@ -97,7 +97,7 @@
                 <!--In Development-->
                 <!--Blog-->
                 <li class="nav-item">
-                    <a class="nav-link" href="works/blog/blog.html">Blog</a>
+                    <a class="nav-link" href="content/price/price.html">Pricing</a>
                 </li>
             </ul>
         </div>
