--- a/Version 2/content/price/price.html
+++ b/Version 2/content/price/price.html
@@ -58,6 +58,29 @@
                 <h1 class="display-2 text-center">
                     Pricing.
                 </h1>
+                <p class="lead text-justify">
+                    So you have looked at everything i've done.
+                    You've seen my potential at looking at other websites,
+                    in which I have developed.
+                    Are you ready for pricing?
+                    My prices can vary lot's but here you can see an overview of what I offer.
+                    Sure, this website is not the best looking,
+                    but this is an example of one of the options listed below,
+                    Basic.
+                    I have three classes of website that i'm able to develop.
+                    The first class is Basic.
+                    This is a basic website.
+                    This is nothing fancy.
+                    It gets you by as an online presence.
+                    The next Tier Is Average.
+                    The Average tier is like any website you visit.
+                    Whether that be a Blog,
+                    or anything else, you'll be adequate with this option.
+                    The last/highest tier I have available is called First Class.
+                    A First Class website has everything you'd need on it.
+                    It has the most bleeding edge skills that I have,
+                    and it will include premier support from me.
+                </p>
             </div><!--End Container-->
         </div><!--Global Settings-->
     </div>
