--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -17,15 +17,26 @@
         .navbar-toggler.toggler-example {
             cursor: pointer;
         }
+        .navbar-toggler-icon{
+            background-image: url('assets/icons/navbar/navbar.svg');
+            border: none;
+        }
+        .masthead{
+            position: relative;
+        }
+        .content{
+            position: absolute;
+        }
     </style>
+
 </head>
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-light light-blue lighten-4">
         <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Brayan Quevedo Ramos</a>
         <!-- Collapse button -->
-        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler toggler-example navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"aria-expanded="false" aria-label="Toggle navigation">
         <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span></button>
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent1">
@@ -43,6 +54,24 @@
             </ul>
         </div>
     </nav>
+
+    <!--Intro-->
+    <div class="container-fluid">
+        <div class="row">
+
+            <!--Background Photo-->
+            <div class="col-lg-12">
+                <div class="masthead mx-auto">
+                    <img src="assets/img/background/intro/masthead.jpg" class="col-lg-12 masthead">
+                    <div class="content">
+                        <h1 class="">
+                            Hello
+                        </h1>
+                    </div>
+                </div><!--Img-->
+            </div><!--End Container-->
+        </div><!--Global Settings-->
+    </div>
 
     <!--Place At End-->
     <!--Bootstrap 4 Stuffs-->
