--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -11,21 +11,31 @@
 
     <!--Custom CSS-->
     <style>
+        body, html{
+            height: 100%;
+            margin: 0;
+        }
+        
+        ul{
+            color: white;
+        }
+
         .fa-1x {
             font-size: 1.5rem;
         }
+
         .navbar-toggler.toggler-example {
             cursor: pointer;
         }
+
         .navbar-toggler-icon{
-            background-image: url('assets/icons/navbar/navbar.svg');
+            background-image: url('assets/icons/navbar/navwhite.jpg');
             border: none;
         }
-        .masthead{
-            position: relative;
-        }
-        .content{
-            position: absolute;
+
+        #footer{
+            background-color: gray;
+            margin: 0;
         }
     </style>
 
@@ -39,16 +49,16 @@
         <button class="navbar-toggler toggler-example navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"aria-expanded="false" aria-label="Toggle navigation">
         <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span></button>
         <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent1">
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-white">
                     <a class="nav-link" href="#">Features</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item text-white">
                     <a class="nav-link" href="#">Pricing</a>
                 </li>
             </ul>
@@ -61,14 +71,20 @@
 
             <!--Background Photo-->
             <div class="col-lg-12">
-                <div class="masthead mx-auto">
-                    <img src="assets/img/background/intro/masthead.jpg" class="col-lg-12 masthead">
-                    <div class="content">
-                        <h1 class="">
-                            Hello
-                        </h1>
-                    </div>
-                </div><!--Img-->
+                <img src="assets/img/background/intro/masthead.jpg" class="col-lg-12">
+            </div><!--End Container-->
+        </div><!--Global Settings-->
+    </div>
+
+    <!--About-->
+    <div class="container">
+        <div class="row">
+
+            <!--Intro-->
+            <div class="col-lg-12 text-center">
+                <h1>
+                    Hello, there.
+                </h1>
             </div><!--End Container-->
         </div><!--Global Settings-->
     </div>
@@ -78,6 +94,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!--Font Awesome-->
+    <script defer src="https://use.fontawesome.com/releases/5.1.0/js/all.js"></script>
  
 </body>
 </html>
