--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -15,9 +15,14 @@
             height: 100%;
             margin: 0;
         }
-        
-        ul{
-            color: white;
+
+        @font-face{
+            font-family: 'Quicksand-Light';
+            src: url('assets/fonts/Quicksand-Light.oft');
+        }
+
+        .mast{
+            font-family: 'Quicksand-Light';
         }
 
         .fa-1x {
@@ -82,9 +87,42 @@
 
             <!--Intro-->
             <div class="col-lg-12 text-center">
-                <h1>
-                    Hello, there.
+                <h1 class="mast">
+                    Hello there.
                 </h1>
+                <p class="text-justify lead">
+                    Don't mind the picture up there,
+                    I just wanted to add it.
+                    This website is just used as a contact page,
+                    or so I can make a website - 
+                    on that note...
+                </p>
+            </div><!--End Container-->
+
+            <!--About Me-->
+            <!--Intro-->
+            <div class="col-lg-12">
+                <h1 class="mast text-center">
+                    About Me.
+                </h1>
+            </div><!--End Container-->
+
+            <!--Img-->
+            <div class="col-lg-6">
+                <img src="assets/img/profile/profile-picture-1.jpg" class="col-lg-12">
+            </div><!--End Container-->
+
+            <!--About Me Section-->
+            <div class="col-lg-6">
+                <p class="lead text-justify">
+                    Hello again!
+                    My name's Brayan Quevedo.
+                    This is not the best website in the world,
+                    but it's one I can quickly make to make better sites.
+                    Confused?
+                    Most people would be.
+
+                </p>
             </div><!--End Container-->
         </div><!--Global Settings-->
     </div>
