--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -1,140 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Brayan Quevedo Ramos - Home Page</title>
-    
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!--Custom CSS-->
-    <style>
-        body, html{
-            height: 100%;
-            margin: 0;
-        }
+  <head>
 
-        @font-face{
-            font-family: 'Quicksand-Light';
-            src: url('assets/fonts/Quicksand-Light.oft');
-        }
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        .mast{
-            font-family: 'Quicksand-Light';
-        }
+    <title>Grayscale - Start Bootstrap Theme</title>
 
-        .fa-1x {
-            font-size: 1.5rem;
-        }
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-        .navbar-toggler.toggler-example {
-            cursor: pointer;
-        }
+    <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
-        .navbar-toggler-icon{
-            background-image: url('assets/icons/navbar/navwhite.jpg');
-            border: none;
-        }
+    <!-- Custom styles for this template -->
+    <link href="css/grayscale.min.css" rel="stylesheet">
 
-        #footer{
-            background-color: gray;
-            margin: 0;
-        }
-    </style>
+  </head>
 
-</head>
-<body>
-    <!--Navbar-->
-    <nav class="navbar navbar-light light-blue lighten-4">
-        <!-- Navbar brand -->
-        <a class="navbar-brand" href="#">Brayan Quevedo Ramos</a>
-        <!-- Collapse button -->
-        <button class="navbar-toggler toggler-example navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1"aria-expanded="false" aria-label="Toggle navigation">
-        <span class="dark-blue-text"><i class="fa fa-bars fa-1x"></i></span></button>
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse text-white" id="navbarSupportedContent1">
-            <!-- Links -->
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item text-white">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item text-white">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-            </ul>
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <!--Intro-->
-    <div class="container-fluid">
+    <!-- Intro Header -->
+    <header class="masthead">
+      <div class="intro-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <h1 class="brand-heading">Grayscale</h1>
+              <p class="intro-text">A free, responsive, one page Bootstrap theme.
+                <br>Created by Start Bootstrap.</p>
+              <a href="#about" class="btn btn-circle js-scroll-trigger">
+                <i class="fa fa-angle-double-down animated"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="content-section text-center">
+      <div class="container">
         <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>About Grayscale</h2>
+            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+            <p>This theme features stock photos by
+              <a href="http://gratisography.com/">Gratisography</a>
+              along with a custom Google Maps skin courtesy of
+              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            <!--Background Photo-->
-            <div class="col-lg-12">
-                <img src="assets/img/background/intro/masthead.jpg" class="col-lg-12">
-            </div><!--End Container-->
-        </div><!--Global Settings-->
-    </div>
+    <!-- Download Section -->
+    <section id="download" class="download-section content-section text-center">
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
+          <h2>Download Grayscale</h2>
+          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        </div>
+      </div>
+    </section>
 
-    <!--About-->
-    <div class="container">
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
+      <div class="container">
         <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Contact Start Bootstrap</h2>
+            <p>Feel free to leave us a comment on the
+              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
+              on Start Bootstrap to give some feedback about this theme!</p>
+            <ul class="list-inline banner-social-buttons">
+              <li class="list-inline-item">
+                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-twitter fa-fw"></i>
+                  <span class="network-name">Twitter</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                  <i class="fa fa-github fa-fw"></i>
+                  <span class="network-name">Github</span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                  <i class="fa fa-google-plus fa-fw"></i>
+                  <span class="network-name">Google+</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-            <!--Intro-->
-            <div class="col-lg-12 text-center">
-                <h1 class="mast">
-                    Hello there.
-                </h1>
-                <p class="text-justify lead">
-                    Don't mind the picture up there,
-                    I just wanted to add it.
-                    This website is just used as a contact page,
-                    or so I can make a website - 
-                    on that note...
-                </p>
-            </div><!--End Container-->
+    <!-- Map Section -->
+    <div id="map"></div>
 
-            <!--About Me-->
-            <!--Intro-->
-            <div class="col-lg-12">
-                <h1 class="mast text-center">
-                    About Me.
-                </h1>
-            </div><!--End Container-->
+    <!-- Footer -->
+    <footer>
+      <div class="container text-center">
+        <p>Copyright &copy; Your Website 2018</p>
+      </div>
+    </footer>
 
-            <!--Img-->
-            <div class="col-lg-6">
-                <img src="assets/img/profile/profile-picture-1.jpg" class="col-lg-12">
-            </div><!--End Container-->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-            <!--About Me Section-->
-            <div class="col-lg-6">
-                <p class="lead text-justify">
-                    Hello again!
-                    My name's Brayan Quevedo.
-                    This is not the best website in the world,
-                    but it's one I can quickly make to make better sites.
-                    Confused?
-                    Most people would be.
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-                </p>
-            </div><!--End Container-->
-        </div><!--Global Settings-->
-    </div>
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
-    <!--Place At End-->
-    <!--Bootstrap 4 Stuffs-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/grayscale.min.js"></script>
 
-    <!--Font Awesome-->
-    <script defer src="https://use.fontawesome.com/releases/5.1.0/js/all.js"></script>
- 
-</body>
+  </body>
+
 </html>
