--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -39,6 +39,9 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
@@ -78,7 +81,9 @@
             <p>
               So as you saw from the title section above,
               my name's Brayan Quevedo Ramos.
-              I
+              I love to do front-end development work for fun,
+              and am attempting to take my profession to the next level.
+              I believe that with my
             </p>
         </div>
       </div>
