--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
 
   </head>
 
@@ -73,27 +73,37 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="content-section text-center">
+    <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>About Me.</h2>
-            <p>
-              So as you saw from the title section above,
-              my name's Brayan Quevedo Ramos.
-              I love to do front-end development work for fun,
-              and am attempting to take my profession to the next level.
-              I believe that with my
-            </p>
+          <div class="col-lg-12 mt-4">
+            <h2 class="text-center">About Me.</h2>
+            </div>
+            <div class="col-lg-6">
+              <h3 class="text-center">My Passion.</h3>
+            </div>
+            <div class="col-lg-6">
+              <h3 class="text-center">General Information.</h3>
+            </div>
+      </div>
+    </section>
+
+    <!--Portfolio-->
+    <section id="portfolio">
+      <div class="container">
+        <div class="col-lg-8 mx-auto">
+          <h2>Portfolio.</h2>
         </div>
       </div>
     </section>
 
     <!--Pricing-->
-    <section id="pricing" class="download-section content-section text-center">
+    <section id="pricing">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Pricing.</h2>
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Pricing.</h2>
+          </div>
         </div>
       </div>
     </section>
@@ -103,10 +113,6 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="https://twitter.com/brayanq44997157" class="btn btn-default btn-lg">
@@ -123,6 +129,17 @@
                 </a>
               </li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Donate-->
+    <section id="donate">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2>Donations.</h2>
           </div>
         </div>
       </div>
