--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -91,8 +91,8 @@
     <!--Portfolio-->
     <section id="portfolio">
       <div class="container">
-        <div class="col-lg-8 mx-auto">
-          <h2>Portfolio.</h2>
+        <div class="col-lg-12">
+          <h2 class="text-center">Portfolio.</h2>
         </div>
       </div>
     </section>
@@ -112,6 +112,16 @@
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
+          
+          <!--Header-->
+          <div class="col-lg-12">
+            <h2 class="text-center">
+              Contact.
+            </h2>
+          </div>
+
+          <!--Icons-->
+          <div class="col-lg-12"></
           <div class="col-lg-8 mx-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
@@ -131,6 +141,8 @@
             </ul>
           </div>
         </div>
+
+        </div>
       </div>
     </section>
 
@@ -138,7 +150,7 @@
     <section id="donate">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-center">
             <h2>Donations.</h2>
           </div>
         </div>
