--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -1,179 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Brayan Quevedo Ramos</title>
+  <title>Brayan Quevedo Ramos</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+  <!--Custom Fonts-->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
-    <!-- Custom styles for this template -->
-    <link href="css/grayscale.css" rel="stylesheet">
+  <!-- Custom CSSe -->
+  <link href="css/grayscale.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body id="page-top">
+<body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Brayan Quevedo Ramos.</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#donate">Donate</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Brayan Quevedo Ramos.</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <!--Nav Links-->
+
+          <!--To About Section-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+
+          <!--To Portfolio Section-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+          </li>
+
+          <!--To Pricing Section-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
+          </li>
+
+          <!--To Contact Section-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+
+          <!--To Donate Section-->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#donate">Donate</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Intro Header -->
-    <header class="masthead">
-      <div class="intro-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <h1 class="brand-heading">Brayan Quevedo Ramos.</h1>
-              <p class="intro-text text-capitalize">An Aspiring Web-Developer, Looking to build a modern future!</p>
-              <a href="#about" class="btn btn-circle js-scroll-trigger">
-                <i class="fa fa-angle-double-down animated"></i>
-              </a>
-            </div>
+  <!-- Intro Header -->
+  <header class="masthead">
+    <div class="intro-body">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
+            <h1 class="brand-heading">Brayan Quevedo Ramos.</h1>
+            <p class="intro-text text-capitalize">An Aspiring Web-Developer, Looking to build a modern future!</p>
+            <a href="#about" class="btn btn-circle js-scroll-trigger">
+              <i class="fa fa-angle-double-down animated"></i>
+            </a>
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <!-- About Section -->
-    <section id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 mt-4">
-            <h2 class="text-center">About Me.</h2>
-            </div>
-            <div class="col-lg-6">
-              <h3 class="text-center">My Passion.</h3>
-            </div>
-            <div class="col-lg-6">
-              <h3 class="text-center">General Information.</h3>
-            </div>
+  <!-- About Section -->
+  <section id="about">
+    <div class="container">
+      <div class="row">
+
+      <!--Header-->
+      <div class="col-lg-12 mt-4">
+        <h2 class="text-center">About Me.</h2>
+        <p class="text-justify">
+          Hello there!
+          My Name's Brayan Quevedo Ramos,
+          and i'm an aspiring Software/Web Developer!
+          My passion is just making things.
+          Not just any old thing like a sand castle,
+          but I want to make programs that look very elegant,
+          professional,
+          and that have functionality in today's applications.
+          Not just that,
+          but can be modified to have long lasting impact
+          on future generations!
+        </p>
       </div>
-    </section>
 
-    <!--Portfolio-->
-    <section id="portfolio">
-      <div class="container">
+      <!--My Passion/Left Side-->
+      <div class="col-lg-6">
+        <h3 class="text-center">My Passion.</h3>
+        <p class="text-justify">
+          If you couldn't tell already,
+          I love everything computers.
+        </p>
+      </div>
+
+      <!--General Info/Right Side-->
+      <div class="col-lg-6">
+        <h3 class="text-center">General Information.</h3>
+      </div>
+    </div>
+  </section>
+
+  <!--Portfolio-->
+  <section id="portfolio">
+    <div class="container">
+      <div class="row">
         <div class="col-lg-12">
           <h2 class="text-center">Portfolio.</h2>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!--Pricing-->
-    <section id="pricing">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2>Pricing.</h2>
-          </div>
+  <!--Pricing-->
+  <section id="pricing">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Pricing.</h2>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="content-section text-center">
-      <div class="container">
-        <div class="row">
+  <!-- Contact Section -->
+  <section id="contact" class="content-section text-center">
+    <div class="container">
+      <div class="row">
           
-          <!--Header-->
-          <div class="col-lg-12">
-            <h2 class="text-center">
-              Contact.
-            </h2>
-          </div>
-
-          <!--Icons-->
-          <div class="col-lg-12"></
-          <div class="col-lg-8 mx-auto">
-            <ul class="list-inline banner-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://twitter.com/brayanq44997157" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/Brayan2134" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-              </li>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <!--Header-->
+        <div class="col-lg-12">
+          <h2 class="text-center">
+            Contact.
+          </h2>
         </div>
 
+        <!--Icons-->
+        <div class="col-lg-12"></
+        <div class="col-lg-8 mx-auto">
+          <ul class="list-inline banner-social-buttons">
+            <li class="list-inline-item">
+              <a href="https://twitter.com/brayanq44997157" class="btn btn-default btn-lg">
+              <i class="fa fa-twitter fa-fw"></i>
+              <span class="network-name">Twitter</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/Brayan2134" class="btn btn-default btn-lg">
+              <i class="fa fa-github fa-fw"></i>
+              <span class="network-name">Github</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!--Donate-->
+  <section id="donate">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Donations.</h2>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!--Donate-->
-    <section id="donate">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2>Donations.</h2>
-          </div>
-        </div>
-      </div>
-    </section>
+  <!--Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Footer -->
-    <footer>
-      <div class="container text-center">
-        <p>Copyright &copy; Brayan Quevedo Ramos 2018</p>
-      </div>
-    </footer>
+  <!--Plugin JavaScript-->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!--Custom scripts for this template-->
+  <script src="js/grayscale.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/grayscale.min.js"></script>
-
-  </body>
-
+</body>
+<footer>
+  <div class="container text-center">
+    <p>Copyright &copy; Brayan Quevedo Ramos 2018</p>
+  </div>
+</footer>
 </html>
