About Me Section 1/2 Done

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -112,12 +112,47 @@
         <p class="text-justify">
           If you couldn't tell already,
           I love everything computers.
+          I love development, and every aspect that is in it.
+          <b><i>Anyone, anywhere, and anytime.</i></b>
+          That is my motto for development
+          since I believe it reflects me as a person!
+          Development (especially web development)
+          is such an easy language to just
+          'grab and go' with.
+          You can sit down one afternoon and
+          learn the basics of HTML/CSS.
+          Sure you won't be able to make high quality websites,
+          but it's nice to have those basic skills, should something arise!
+          I also reflect on this motto because of how I work.
+          This may be good or bad but,
+          I work in short bursts.
+          So because of that, it can be while driving somewhere or
+          being at Starbucks,
+          I might just get a feeling of motivation and enthusiasm
+          to develop something, or continue any of a=my existing projects.
+          This may or may not be linked due to the caffeine,
+          but non-the-less,
+          I would still continue doing the work!  
         </p>
       </div>
 
       <!--General Info/Right Side-->
       <div class="col-lg-6">
         <h3 class="text-center">General Information.</h3>
+        <p class="text-justify">
+          Cool,
+          I can make nice websites
+          but besides that,
+          who really 
+          <b>AM I?</b>
+          Besides the name provided,
+          I do also do non-development related things!
+          I'm currently working at a smoothie place down the street
+          from where I live!
+          I know that software development and web development
+          is all fun, and stressful
+          but I also like to contribute to other activities!
+        </p>
       </div>
     </div>
   </section>
@@ -126,9 +161,12 @@
   <section id="portfolio">
     <div class="container">
       <div class="row">
+
+        <!--Header-->
         <div class="col-lg-12">
           <h2 class="text-center">Portfolio.</h2>
         </div>
+
       </div>
     </div>
   </section>
@@ -170,6 +208,12 @@
             <a href="https://github.com/Brayan2134" class="btn btn-default btn-lg">
               <i class="fa fa-github fa-fw"></i>
               <span class="network-name">Github</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://instagram.com/brayan2134/?hl=en" class="btn btn-default btn-lg">
+            <i class="fa fa-instagram fa-fw"></i>
+            <span class="network-name">Instagram</span>
             </a>
           </li>
         </ul>
