About To Get Into Details!

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -152,6 +152,19 @@
           I know that software development and web development
           is all fun, and stressful
           but I also like to contribute to other activities!
+          For example,
+          i'm a huge E-Sports fan!
+          I'm #FNC (Fnatic)
+          in every E-Sport in which
+          they contribute to,
+          especially League Of Legends
+          and Counter Strike Global Offense.
+          If we branch out of the tech bubble
+          and things that every 15 year old does,
+          I also love to just talk and interact with people.
+          Sure,
+          this sounds dumb,
+          but let's really look into it!
         </p>
       </div>
     </div>
