Finished About Me

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -129,7 +129,7 @@
           So because of that, it can be while driving somewhere or
           being at Starbucks,
           I might just get a feeling of motivation and enthusiasm
-          to develop something, or continue any of a=my existing projects.
+          to develop something, or continue any of any existing projects.
           This may or may not be linked due to the caffeine,
           but non-the-less,
           I would still continue doing the work!  
@@ -165,6 +165,32 @@
           Sure,
           this sounds dumb,
           but let's really look into it!
+          If you look around you,
+          you can name at least 1 person who
+          doesn't really like to talk.
+          Studies have shown that the
+          average teen spends 10 hours daily
+          engaging on social media!*1
+          That means that 10 hours a day is lost to
+          texting, rather than speaking face to face.
+          In my experience I love speaking face to face,
+          because it's just something about the instant reaction,
+          and something else that I just can't explain in words
+          to tell you the difference.
+          Does that mean that I still text 
+          and use social media?
+          <b>YES</b>
+          I still do,
+          probably still more than the average person
+          but anytime the opportunity is presented
+          to talk to the person face to face,
+          rather than by phone
+          even if it means walking a short distance!
+        </p>
+        <p class="text-secondary">
+          <a href="https://www.google.com/search?q=how+long+are+teens+on+their+phone+daily&oq=how+long+are+teens+on+their+phone+daily&aqs=chrome..69i57.8705j0j9&sourceid=chrome&ie=UTF-8">
+          *1
+          </a>
         </p>
       </div>
     </div>
