Setup Pricing Done

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -18,8 +18,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
-  <!-- Custom CSSe -->
-  <link href="css/grayscale.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="css/grayscale.index.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 
 </head>
 
@@ -216,8 +217,75 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2>Pricing.</h2>
+          <p class="text-justify">
+            So you may be interested in hiring me for your next project!
+            If you, i'd like to personally say thank you,
+            as you're helping me reach the next level of
+            my web/software development profession!
+            Each of these levels has the same basic 
+            functionality and effort put into it,
+            and it's going to be a great site!
+            Support and questions are all going to be handled
+            as fast as I can.
+            Since i'm obviously still a teen,
+            i'm going to still do teen things,
+            like go to the movies,
+            but i'll
+            <b>ALWAYS</b>
+            stay in contact with requests/changes! 
+            All of my progress is always listed on
+            my GitHub.
+          </p>
+          <hr>
         </div>
-      </div>
+
+        <!--Basic-->
+        <div class="col-lg-4">
+          <div class="col-lg-9">
+            <h3 id="price">Basic.</h3>
+          </div>
+          <div class="col-lg-3">
+            <h1 id="price">$199</h1>
+          </div>
+        </div>
+
+        <!--Company-->
+        <div class="col-lg-4">
+          <div class="col-lg-3">
+            <h3 id="price">Company.</h3>
+          </div>
+          <div class="col-lg-9">
+            <h1 id="price">$349</h1>
+          </div>
+          <div class="col-lg-12">
+            <p class="text-muted text-justify">
+              These prices are starting at this price.
+              Depending on the demand of the website,
+              price may go up.
+            </p>
+            <p class="text-justify">
+              Billed once project is complete.
+            </p>
+          </div>
+        </div><!--End Container-->
+
+        <!--Enterprise-->
+        <div class="col-lg-4">
+
+          <!--Header-->
+          <div class="col-lg-9">
+            <h3 id="price">Enterprise.</h3>
+          </div>
+          <div class="col-lg-3">
+            <h1 id="price">$799</h1>
+          </div>
+
+          <!--Discolosure-->
+          <div class="col-lg-12">
+
+          </div>
+        </div><!--End Container-->
+      </div><!--Global Settings-->
     </div>
   </section>
 
