Some information on pricing

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -235,6 +235,11 @@
             stay in contact with requests/changes! 
             All of my progress is always listed on
             my GitHub.
+            These pages I create will always be mobile friendly,
+            by using Bootstrap to make them as Bootstrap is a mobile first
+            CSS/HTML library,
+            and more people are using phones
+            than ever!
           </p>
           <hr>
         </div>
@@ -246,6 +251,14 @@
           </div>
           <div class="col-lg-3">
             <h1 id="price">$199</h1>
+          </div>
+          <div class="col-lg-12">
+            <p class="text-muted text-justify">
+              This price is for a 1-3 page,
+              scrollable web page.
+              Price may change on how much Information
+              is required depending on the web page.
+            </p>
           </div>
         </div>
 
@@ -259,13 +272,19 @@
           </div>
           <div class="col-lg-12">
             <p class="text-muted text-justify">
-              These prices are starting at this price.
-              Depending on the demand of the website,
-              price may go up.
+              These prices are rough estimates of what I charge.
+              Depending on deadline, requested content,
+              and support provided to me
+              (fast response for questions)
+              the price may change,
+              but not after we set a price.
             </p>
+
+            <!--Disclosure-->
             <p class="text-justify">
               Billed once project is complete.
             </p>
+            <hr>
           </div>
         </div><!--End Container-->
 
@@ -280,9 +299,29 @@
             <h1 id="price">$799</h1>
           </div>
 
-          <!--Discolosure-->
+          <!--Disclosure-->
           <div class="col-lg-12">
-
+            <p class="text-muted text-justify">
+              These prices rough estimates
+              of what I charge.
+              Depending on deadlines
+              and requested content.
+            </p>
+            
+            <!--Money Down-->
+            <p class="text-justify">
+              <b>Billed in three parts.</b><br>
+              10% once I agree to the project
+              and demonstrate that I have adequate skills for the task.
+              If current skill requirement isn't met, then no charge. <br>
+              40% Once I complete the minimum requirements for the
+              requested project.
+              This could be foundations of the webpage,
+              but not ready for production. <br>
+              The last 50% is due once the project is finished
+              or production ready. 
+            </p>
+            <hr>
           </div>
         </div><!--End Container-->
       </div><!--Global Settings-->
