Hosting Options Done!

--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -259,7 +259,24 @@
               Price may change on how much Information
               is required depending on the web page.
             </p>
-          </div>
+
+            <!--Disclosure-->
+            <p class="text-justify">
+              Billed once project is complete.
+            </p>
+            <hr>
+
+            <!--Hosting-->
+            <h3 id="price">Hosting.</h3>
+            <p class="text-justify">
+              This is a $0-20 monthly addition. <br>
+              $0 - Owner Hosts. <br>
+              $0 - 000Webhost. <br>
+              $5 - Awardspace. <br>
+              $20 - Domain Name/Free Hosting.
+            </p>
+            <hr>
+          </div><!--Container Settings-->
         </div>
 
         <!--Company-->
@@ -285,8 +302,21 @@
               Billed once project is complete.
             </p>
             <hr>
-          </div>
-        </div><!--End Container-->
+
+            <!--Hosting-->
+            <h3 id="price">Hosting.</h3>
+            <p class="text-justify">
+              This is a $0-80 addon,
+              billed monthly. <br>
+              $0 - Owner Hosts. <br>
+              $0 - 000Webhost. <br>
+              $10 - Awardspace. <br>
+              $40 - Domain/Free Hosting. <br>
+              $80 - Domain/Free Hosting With SSL/Security. <br>
+            </p>
+            <hr>
+          </div><!--Container Settings-->
+        </div>
 
         <!--Enterprise-->
         <div class="col-lg-4">
@@ -311,19 +341,30 @@
             <!--Money Down-->
             <p class="text-justify">
               <b>Billed in three parts.</b><br>
-              10% once I agree to the project
+              <b>10%</b>
+              once I agree to the project
               and demonstrate that I have adequate skills for the task.
               If current skill requirement isn't met, then no charge. <br>
-              40% Once I complete the minimum requirements for the
+              <b>40%</b>
+              Once I complete the minimum requirements for the
               requested project.
               This could be foundations of the webpage,
               but not ready for production. <br>
-              The last 50% is due once the project is finished
+              <b>50%</b>
+              is due once the project is finished
               or production ready. 
             </p>
             <hr>
-          </div>
-        </div><!--End Container-->
+
+            <!--Hosting-->
+            <h3 id="price">Hosting.</h3>
+            <p class="text-justify">
+              Web hosting is not available for this
+              plan.
+            </p>
+            <hr>
+          </div><!--Container Settings-->
+        </div>
       </div><!--Global Settings-->
     </div>
   </section>
