--- a/Version 3/index.html
+++ b/Version 3/index.html
@@ -276,6 +276,25 @@
               $20 - Domain Name/Free Hosting.
             </p>
             <hr>
+
+            <!--Future Development-->
+            <h3 id="price">Future Development.</h3>
+            <p class="text-justify">
+              Future Development is offered in this plan also.
+              Minor changes,
+              (like modifying a paragraph)
+              is
+              <b>Free.</b>
+              Other than that,
+              the price, on average,
+              is
+              <b>$129.</b>
+              The price may change,
+              depending on new needs,
+              deadlines, and communication between
+              client and developer. 
+            </p>
+            <hr>
           </div><!--Container Settings-->
         </div>
 
@@ -313,6 +332,24 @@
               $10 - Awardspace. <br>
               $40 - Domain/Free Hosting. <br>
               $80 - Domain/Free Hosting With SSL/Security. <br>
+            </p>
+            <hr>
+
+            <!--Future Development-->
+            <h3 id="price">Future Development.</h3>
+            <p class="text-justify">
+              Future Development is still available with any
+              agreement if I originally worked under this plan
+              (Company).
+              The price shall be
+              <b>$149</b>
+              on average.
+              Like mentioned above,
+              if the company requests a lot of extra content,
+              or needs specific needs, price may change.
+              The price may not change however,
+              if a renewal contact for Future Development
+              is reached.
             </p>
             <hr>
           </div><!--Container Settings-->
@@ -363,13 +400,25 @@
               plan.
             </p>
             <hr>
+
+            <!--Future Development-->
+            <h3 id="price">Future Development.</h3>
+            <p class="text-justify">
+              Future development is offered in any
+              Enterprise agreement plan.
+              If I develop one project for you,
+              the next project will be
+              <b>$349</b>
+              for continued projects.
+            </p>
+            <hr>
           </div><!--Container Settings-->
         </div>
       </div><!--Global Settings-->
     </div>
   </section>
 
-  <!-- Contact Section -->
+  <!--Contact Section-->
   <section id="contact" class="content-section text-center">
     <div class="container">
       <div class="row">
